--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -28,6 +28,6 @@ nav a:hover{
 }
 
 nav a.active{
-  background-color: var(--color-bg);
-  color: white;
+  background-color: var(--color-primary);
+  color: var(--color-bg);
 }
