not fully worked

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,7 @@ header {
 
 .header__container {
   text-align: center;
-  height: 100px;
+  height: 10%;
   position: relative;
 }
 
@@ -28,18 +28,18 @@ header {
   gap: 0.8rem;
   position: absolute;
   left: 0;
-  bottom: -28rem;
-  font-size: 35px;
+  bottom: -30%;
+  font-size: 3vw;
 }
 
-.header__socials>:nth-child(1):hover{
-  font-size: 45px;
+.header__socials > :nth-child(1):hover {
+  font-size: 4vw;
 }
-.header__socials>:nth-child(2):hover{
-  font-size: 45px;
+.header__socials > :nth-child(2):hover {
+  font-size: 4vw;
 }
-.header__socials>:nth-child(3):hover{
-  font-size: 45px;
+.header__socials > :nth-child(3):hover {
+  font-size: 4vw;
 }
 
 /* Me */
@@ -54,39 +54,40 @@ header {
     rgba(252, 176, 69, 1) 100%
   );
   background-color: var(--color-primary);
-  width: 22rem;
-  height: 30rem;
+  width: 22vw;
+  height: 30vh;
   position: absolute;
-  left: 34%;
+  left: 38%;
   transform-origin: translateX(-40%);
   margin-top: 4rem;
   border-radius: 12rem 12rem 0 0;
   overflow: hidden;
-  padding: 5rem 1.5rem 1.5rem 1.5rem;
+  padding: 5vh 1.5vw 1.5vh 1.5vw;
 }
 
 .scroll__down {
   position: absolute;
   right: 0;
   transform: rotate(90deg);
-  bottom: -29rem;
+  bottom: -30%;
   font-weight: 300;
-  font-size: 0.9rem;
+  font-size: 1.5vw;
 }
 
-/* Responsibe */
+/* Responsive */
 
 @media screen and (max-width: 1024px) {
-  header{
+  header {
     height: 68vh;
   }
 }
 
 @media screen and (max-width: 600px) {
-  header{
+  header {
     height: 100vh;
   }
-  .header__socials, .scroll__down {
+  .header__socials,
+  .scroll__down {
     display: none;
   }
 }
