--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,18 +1,14 @@
 .experience__container {
-  display: flex;
-  flex: 1 1;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-basis: content;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 1rem;
 }
 
 .experience__content {
   margin-top: 1rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   row-gap: 2rem;
-  column-gap: 2rem;
 }
 
 .experience__container > div {
@@ -21,29 +17,76 @@
   border-radius: 2rem;
   border: 1px solid transparent;
   margin: 0 auto;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
+.experience__card {
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 
-@media screen and (max-width: 1024px){
-  .experience__container{
-    grid-template-columns: 1fr;
+.experience__card-content {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  flex: 1;
+}
+
+.experience__card-icon {
+  color: #fff;
+  background-color: #5f72e4;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  height: 60px;
+  margin-bottom: 20px;
+  width: 60px;
+}
+
+.experience__card-title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.experience__card-experience {
+  font-size: 16px;
+  font-weight: 400;
+  opacity: 0.7;
+}
+@media screen and (max-width: 1024px) {
+  .experience__container {
+    justify-content: center;
   }
-  .experience__container > div{
+  .experience__container > div {
     width: 80%;
     padding: 2rem;
-    margin: 0 auto;
+    margin: 1rem 0;
   }
-  .experience__content{
+  .experience__content {
     padding: 1rem;
+    column-gap: 0;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .experience__container{
-    gap: 1rem;
+  .experience__container {
+    flex-direction: column;
+    align-items: stretch;
   }
-  .experience__container > div{
+  .experience__container > div {
     width: 100%;
     padding: 2rem 1rem;
+    margin: 1rem 0;
+  }
+  .experience__content {
+    row-gap: 1rem;
   }
 }
